--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -453,6 +453,7 @@
   <string name="GroupManagement_invite_single_user">No podeu afegir automàticament %1$s a aquest grup. \n\nHan estat convidats a afegir-s\'hi i no veuran cap missatge del grup fins que no ho acceptin.</string>
   <string name="GroupManagement_learn_more">Més informació</string>
   <string name="GroupManagement_invite_multiple_users">No podeu afegir aquests usuaris automàticament a aquest grup.\n\nHan estat convidats a afegir-s\'hi i no veuran cap missatge del grup fins que ho acceptin.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Voleu abandonar el grup?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Ja no podreu enviar o rebre missatges d\'aquest grup.</string>
@@ -806,7 +807,6 @@
   <string name="MessageRecord_you_updated_group">Heu actualitzat el grup.</string>
   <string name="MessageRecord_the_group_was_updated">S\'ha actualitzat el grup.</string>
   <string name="MessageRecord_you_called_date">Heu trucat · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Trucada perduda · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s ha actualitzat el grup.</string>
   <string name="MessageRecord_s_called_you_date">%1$s us ha trucat · %2$s</string>
   <string name="MessageRecord_called_s">Heu trucat a %s</string>
@@ -1227,7 +1227,8 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="ThreadRecord_draft">Esborrany:</string>
   <string name="ThreadRecord_called">Heu trucat</string>
   <string name="ThreadRecord_called_you">Us ha trucat</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Trucada perduda</string> -->
+  <string name="ThreadRecord_missed_audio_call">Trucada d\'àudio perduda</string>
+  <string name="ThreadRecord_missed_video_call">Trucada de vídeo perduda</string>
   <string name="ThreadRecord_media_message">Missatge multimèdia</string>
   <string name="ThreadRecord_sticker">Adhesiu</string>
   <string name="ThreadRecord_view_once_photo">Fotografia d\'una sola visualització</string>
@@ -1514,6 +1515,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="conversation_item_received__contact_photo_description">Foto del contacte</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Es carrega</string>
+  <string name="ConversationUpdateItem_learn_more">Més informació</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Reprodueix… Pausa</string>
   <string name="audio_view__download_accessibility_description">Baixa</string>
@@ -2027,6 +2029,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <!--media_preview-->
   <string name="media_preview__save_title">Desa</string>
   <string name="media_preview__forward_title">Reenvia</string>
+  <string name="media_preview__share_title">Compartir-lo</string>
   <string name="media_preview__all_media_title">Tot el contingut</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Previsualització multimèdia</string>
@@ -2338,5 +2341,12 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s a %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Suprimeix</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Membre</string>
+  <string name="ReviewCard__remove_from_group">Suprimeix del grup</string>
+  <string name="ReviewCard__block">Bloca</string>
+  <string name="ReviewCard__delete">Suprimeix</string>
   <!--EOF-->
 </resources>
