--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -399,6 +399,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">Vybrat z galerie</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">Odebrat fotografii</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">Pořizování fotografii vyžaduje povolení přístupu ke kameře</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">Prohlížení vaší galerie vyžaduje oprávnění pro přístup k úložišti.</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">Teď</string>
   <string name="DateUtils_minutes_ago">%dm</string>
@@ -484,6 +485,13 @@
   <string name="GroupManagement_invite_single_user">“%1$s” nemůže být přidán do skupiny automaticky.\n\nByl pozván, ale neuvidí žádné zprávy, dokud pozvání nepřijme.</string>
   <string name="GroupManagement_learn_more">Zjistit více</string>
   <string name="GroupManagement_invite_multiple_users">Tyto uživatele nemůžete přidat do skupiny automaticky.\n\nByli pozváni, ale neuvidí žádné zprávy dokud pozvání nepřijmou.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Tento člen není způsobilý pro připojení k nové verzi skupin a byl odstraněn ze skupiny:</item>
+    <item quantity="few">Tito členové nejsou způsobilí pro připojení k nové verzi skupin a byli odstraněni ze skupiny:</item>
+    <item quantity="many">Tito členové nejsou způsobilí pro připojení k nové verzi skupin a byli odstraněni ze skupiny:</item>
+    <item quantity="other">Tito členové nejsou způsobilí pro připojení k nové verzi skupin a byli odstraněni ze skupiny:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Opustit skupinu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nebudete dále moci odesílat nebo přijímat zprávy v této skupině.</string>
@@ -875,7 +883,8 @@
   <string name="MessageRecord_you_updated_group">Upravili jste skupinu.</string>
   <string name="MessageRecord_the_group_was_updated">Skupina byla aktualizována.</string>
   <string name="MessageRecord_you_called_date">Volali jste · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Zmeškaný hovor · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">Zmeškaný hovor · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Zmeškaný videohovor · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s upravil(a) skupinu.</string>
   <string name="MessageRecord_s_called_you_date">%1$s vám volal(a) · %2$s</string>
   <string name="MessageRecord_called_s">Volán %s</string>
@@ -885,6 +894,7 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Nastavili jste časovač pro zmizení zpráv na %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s nastavil(a) časovač pro zmizení zpráv na %2$s.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">Časovač pro zmizení zprávy byl nastaven na %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Tato skupina byla aktualizována na novou verzi.</string>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s změnil jméno svého profilu na %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s změnil jméno svého profilu z %2$s na %3$s.</string>
@@ -1325,7 +1335,8 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="ThreadRecord_draft">Koncept:</string>
   <string name="ThreadRecord_called">Vy jste volal</string>
   <string name="ThreadRecord_called_you">Volal vás</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Zmeškaný hovor</string> -->
+  <string name="ThreadRecord_missed_audio_call">Zmeškaný hovor</string>
+  <string name="ThreadRecord_missed_video_call">Zmeškaný video hovor</string>
   <string name="ThreadRecord_media_message">Multimediální zpráva</string>
   <string name="ThreadRecord_sticker">Nálepka</string>
   <string name="ThreadRecord_view_once_photo">Fotografie pro jednorázové zobrazení</string>
@@ -1618,6 +1629,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="conversation_item_received__contact_photo_description">Fotografie kontaktu</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Načítám</string>
+  <string name="ConversationUpdateItem_learn_more">Zjistit více</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Spustit … Pozastavit</string>
   <string name="audio_view__download_accessibility_description">Stáhnout</string>
@@ -2147,6 +2159,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <!--media_preview-->
   <string name="media_preview__save_title">Uložit</string>
   <string name="media_preview__forward_title">Přeposlat</string>
+  <string name="media_preview__share_title">Sdílet</string>
   <string name="media_preview__all_media_title">Všechna média</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Náhled multimedií</string>
@@ -2445,7 +2458,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="RecipientBottomSheet_video_call_description">Videohovor</string>
   <string name="RecipientBottomSheet_remove_s_as_group_admin">Odebrat %1$s jako správce skupiny?</string>
   <string name="RecipientBottomSheet_s_will_be_able_to_edit_group">\"%1$s\" bude moci upravovat tuto skupinu a její členy.</string>
-  <string name="RecipientBottomSheet_remove_s_from_the_group">Odstranit %1$s ze skupiny?</string>
+  <string name="RecipientBottomSheet_remove_s_from_the_group">Odebrat %1$s ze skupiny?</string>
   <string name="RecipientBottomSheet_remove">Odebrat</string>
   <string name="RecipientBottomSheet_copied_to_clipboard">Zkopírováno do schránky</string>
   <string name="GroupRecipientListItem_admin">Správce</string>
@@ -2472,5 +2485,19 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s pro %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Žádné společné skupiny.</string>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Odebrat %1$s ze skupiny?</string>
+  <string name="ReviewCardDialogFragment__remove">Odebrat</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Odebrání člena skupiny se nezdařilo.</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Člen</string>
+  <string name="ReviewCard__request">Požadavek</string>
+  <string name="ReviewCard__your_contact">Váš kontakt</string>
+  <string name="ReviewCard__remove_from_group">Odebrat ze skupiny</string>
+  <string name="ReviewCard__update_contact">Aktualizovat kontakt</string>
+  <string name="ReviewCard__block">Blokovat</string>
+  <string name="ReviewCard__delete">Smazat</string>
+  <string name="ReviewCard__recently_changed">Nedávno změněno profilové jméno z %1$s na %2$s</string>
   <!--EOF-->
 </resources>
