--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -487,6 +487,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="GroupManagement_invite_single_user">Nid oes modd i chi ychwanegu “%1$s” yn awtomatig at y grŵp hwn.\n\nRydych wedi eich gwahodd i ymuno, a fyddwch chi ddim yn gweld unrhyw negeseuon grŵp nes eich bod yn derbyn.</string>
   <string name="GroupManagement_learn_more">Dysgu rhagor</string>
   <string name="GroupManagement_invite_multiple_users">Nid oes modd i chi ychwanegu\'r defnyddwyr hyn yn awtomatig at y grŵp hwn.\n\nRydych wedi eich gwahodd i ymuno, a fyddwch chi ddim yn gweld unrhyw negeseuon grŵp nes eich bod yn derbyn.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Gadael y grŵp?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Ni fyddwch yn gallu anfon na derbyn negeseuon yn y grŵp hwn mwyach.</string>
@@ -878,7 +879,6 @@ Send neges heb ei ddiogelu?</string>
   <string name="MessageRecord_you_updated_group">Rydych chi wedi diweddaru\'r grŵp.</string>
   <string name="MessageRecord_the_group_was_updated">Diweddarwyd y grŵp.</string>
   <string name="MessageRecord_you_called_date">Rydych wedi galw · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Galwad coll · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">Mae %s wedi diweddaru\'r grŵp.</string>
   <string name="MessageRecord_s_called_you_date">Fe wnaeth %1$s eich galw chi · %2$s</string>
   <string name="MessageRecord_called_s">Wedi galw %s</string>
@@ -1329,7 +1329,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="ThreadRecord_draft">Drafft:</string>
   <string name="ThreadRecord_called">Galwoch chi</string>
   <string name="ThreadRecord_called_you">Wedi\'ch galw chi</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Galwad coll</string> -->
+  <string name="ThreadRecord_missed_audio_call">Galwad sain coll</string>
+  <string name="ThreadRecord_missed_video_call">Galwad fideo coll</string>
   <string name="ThreadRecord_media_message">Neges cyfryngau</string>
   <string name="ThreadRecord_sticker">Sticer</string>
   <string name="ThreadRecord_view_once_photo">Llun gweld unwaith</string>
@@ -1622,6 +1623,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="conversation_item_received__contact_photo_description">Llun cyswllt</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Llwytho</string>
+  <string name="ConversationUpdateItem_learn_more">Dysgu rhagor</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Chwarae … Oedi</string>
   <string name="audio_view__download_accessibility_description">Llwytho i lawr</string>
@@ -2151,6 +2153,7 @@ Send neges heb ei ddiogelu?</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Cadw</string>
   <string name="media_preview__forward_title">Ymlaen</string>
+  <string name="media_preview__share_title">Rhannu</string>
   <string name="media_preview__all_media_title">Pob cyfrwng</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Rhagolwg cyfrwng</string>
@@ -2476,5 +2479,12 @@ Send neges heb ei ddiogelu?</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s i %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Tynnu</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Aelod</string>
+  <string name="ReviewCard__remove_from_group">Tynnu o\'r grŵp</string>
+  <string name="ReviewCard__block">Rhwystro</string>
+  <string name="ReviewCard__delete">Dileu</string>
   <!--EOF-->
 </resources>
