--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -453,6 +453,7 @@
   <string name="GroupManagement_invite_single_user">Vi ne povas aŭtomate aldoni „%1$s“ al tiu grupo.\n\nŜi aŭ li estis invitita kaj ne vidos iujn grupmesaĝojn, antaŭ ol ŝi aŭ li akceptas la inviton.</string>
   <string name="GroupManagement_learn_more">Scii pli</string>
   <string name="GroupManagement_invite_multiple_users">Vi ne povas aŭtomate aldoni tiujn uzantoj al tiu grupo.\n\nIli estis invititaj kaj ne vidos iujn grupmesaĝojn, antaŭ ol ili akceptas la inviton.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Ĉu forlasi grupon?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Vi ne plu povos ricevi aŭ sendi mesaĝojn en tiu grupo.</string>
@@ -806,7 +807,6 @@
   <string name="MessageRecord_you_updated_group">Vi ĝisdatigis la grupon.</string>
   <string name="MessageRecord_the_group_was_updated">La grupo estis ĝisdatigita.</string>
   <string name="MessageRecord_you_called_date">Vi alvokis · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Maltrafita alvoko · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s ĝisdatigis la grupon.</string>
   <string name="MessageRecord_s_called_you_date">%1$s alvokis vin · %2$s</string>
   <string name="MessageRecord_called_s">Vi alvokis %s</string>
@@ -1232,7 +1232,8 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="ThreadRecord_draft">Malneto:</string>
   <string name="ThreadRecord_called">Vi telefonis</string>
   <string name="ThreadRecord_called_you">Telefonis vin</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Maltrafita alvoko</string> -->
+  <string name="ThreadRecord_missed_audio_call">Maltrafita aŭdalvoko</string>
+  <string name="ThreadRecord_missed_video_call">Maltrafita vidalvoko</string>
   <string name="ThreadRecord_media_message">Aŭdvida mesaĝo</string>
   <string name="ThreadRecord_sticker">Glumarko</string>
   <string name="ThreadRecord_view_once_photo">Nurunufoje videbla foto</string>
@@ -1519,6 +1520,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="conversation_item_received__contact_photo_description">Kontakta bildo</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Ŝargo</string>
+  <string name="ConversationUpdateItem_learn_more">Scii pli</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Ludi … Paŭzigi</string>
   <string name="audio_view__download_accessibility_description">Elŝuti</string>
@@ -2032,6 +2034,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <!--media_preview-->
   <string name="media_preview__save_title">Konservi</string>
   <string name="media_preview__forward_title">Plusendi</string>
+  <string name="media_preview__share_title">Kunhavigi</string>
   <string name="media_preview__all_media_title">Ĉiuj aŭvidaĵoj</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Aŭdvida antaŭrigardo</string>
@@ -2343,5 +2346,11 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s al %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Forviŝi</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__remove_from_group">Forigi el la grupo</string>
+  <string name="ReviewCard__block">Bloki</string>
+  <string name="ReviewCard__delete">Forigi</string>
   <!--EOF-->
 </resources>
