--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Los medios que envías para ver solo una vez se eliminan automáticamente tras enviar.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ya has visto este mensaje</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">En este chat puedes añadir notas que sólo tú puedes ver.\nSi tu cuenta tiene dispositivos enlazados, las nuevas notas se sincronizarán.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d participantes usan el mismo nombre.</string>
+  <string name="ConversationFragment__tap_to_review">Toca para revisar</string>
+  <string name="ConversationFragment__review_requests_carefully">Revisa cuidadosamente las solicitudes</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal ha encontrado otra persona con el mismo nombre.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">No hay ningún navegador instalado</string>
   <!--ConversationListFragment-->
@@ -453,6 +457,18 @@
   <string name="GroupManagement_invite_single_user">No se puede añadir automáticamente a %1$s al grupo. Ha recibido una invitación y no podrá ver ningún mensaje hasta que la acepte.</string>
   <string name="GroupManagement_learn_more">Saber más</string>
   <string name="GroupManagement_invite_multiple_users">No se puede añadir automáticamente a estas personas al grupo. Han recibido una invitación y no podrán ver ningún mensaje hasta que la acepten.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">¿Qué son los nuevos grupos?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Funciones de los nuevos grupos incluyen @menciones, admins y más en el futuro.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Todos los mensajes y adjuntos se han mantenido tras la actualización.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Esta persona tiene que aceptar la invitación al grupo y no recibirá ningún mensaje hasta que la acepte:</item>
+    <item quantity="other">Estas personas tienen que aceptar la invitación al grupo y no recibirán ningún mensaje hasta que la acepten:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Esta persona no puede unirse a grupos del nuevo sistema y no está entre sus participantes:</item>
+    <item quantity="other">Estas personas no pueden unirse a grupos del nuevo sistema y no están entre sus participantes:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">¿Abandonar grupo?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">No podrás enviar o recibir más mensajes en este grupo.</string>
@@ -570,8 +586,8 @@
   <string name="ManageGroupActivity_failed_to_update_the_group_due_to_a_network_error_please_retry_later">Fallo al actualizar el grupo por un problema de red, por favor inténtalo más tarde</string>
   <string name="ManageGroupActivity_edit_name_and_picture">Editar nombre e imagen</string>
   <string name="ManageGroupActivity_legacy_group">Grupo antiguo</string>
-  <string name="ManageGroupActivity_legacy_group_learn_more">Este grupo usa el sistema antiguo de Signal. Características como admins de grupo o menciones solo están disponibles en el nuevo sistema.</string>
-  <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Este es un grupo de MMS sin cifrar. Para chatear en privado y acceder a características como nombre e imagen de grupo, invita a tus amistades a usar Signal.</string>
+  <string name="ManageGroupActivity_legacy_group_learn_more">Este grupo usa el sistema antiguo de Signal. Funciones como admins de grupo o menciones solo están disponibles en el nuevo sistema.</string>
+  <string name="ManageGroupActivity_this_is_an_insecure_mms_group">Este es un grupo de MMS sin cifrar. Para chatear en privado y acceder a funciones como nombre e imagen de grupo, invita a tus amistades a usar Signal.</string>
   <string name="ManageGroupActivity_invite_now">Invitar ahora</string>
   <!--GroupMentionSettingDialog-->
   <string name="GroupMentionSettingDialog_notify_me_for_mentions">Notificar cuando alguien me mencione</string>
@@ -806,7 +822,8 @@
   <string name="MessageRecord_you_updated_group">Has actualizado el grupo.</string>
   <string name="MessageRecord_the_group_was_updated">Se actualizó el grupo.</string>
   <string name="MessageRecord_you_called_date">Has llamado · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Llamada perdida · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">Llamada perdida · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Vídeollamada perdida · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s ha actualizado el grupo.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ha llamado · %2$s</string>
   <string name="MessageRecord_called_s">Has llamado a %s</string>
@@ -816,6 +833,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Has fijado la desaparición de mensajes a %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s ha fijado la desaparición de mensajes a %2$s. </string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">El tiempo de desaparición de mensajes se ha fijado en %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Este grupo se ha actualizado al nuevo sistema de grupos.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s participante no se puede añadir automáticamente al nuevo grupo: Se le ha enviado una invitación para unirse.</item>
+    <item quantity="other">%1$s participantes no se pueden añadir automáticamente al nuevo grupo: Se les ha enviado una invitación para unirse.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s ha cambiado su nombre a %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$sha cambiado su nombre de %2$s a %3$s.</string>
@@ -1233,7 +1255,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="ThreadRecord_draft">Borrador:</string>
   <string name="ThreadRecord_called">Has llamado</string>
   <string name="ThreadRecord_called_you">Te ha llamado</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Llamada perdida</string> -->
+  <string name="ThreadRecord_missed_audio_call">Llamada perdida</string>
+  <string name="ThreadRecord_missed_video_call">Vídeollamada perdida</string>
   <string name="ThreadRecord_media_message">Mensaje multimedia</string>
   <string name="ThreadRecord_sticker">Cromo</string>
   <string name="ThreadRecord_view_once_photo">Foto para ver sólo una vez</string>
@@ -1328,6 +1351,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Este mensaje se eliminará permanentemente.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s de %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">El adjunto original ya no está disponible.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Fallo al encontrar la aplicación para mostrar este adjunto.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d mensajes nuevos en %2$d chats</string>
   <string name="MessageNotifier_most_recent_from_s">Más recientes desde: %1$s</string>
@@ -1520,6 +1544,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="conversation_item_received__contact_photo_description">Foto de contacto</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Cargando</string>
+  <string name="ConversationUpdateItem_learn_more">Saber más</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">reproducir o pausar audio</string>
   <string name="audio_view__download_accessibility_description">Descargar</string>
@@ -1919,9 +1944,9 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_notifications__priority">Prioridad</string>
   <string name="preferences_communication__category_sealed_sender">Remitente confidencial</string>
   <string name="preferences_communication__sealed_sender_display_indicators">Mostrar indicadores</string>
-  <string name="preferences_communication__sealed_sender_display_indicators_description">Muestra el icono de estado al tocar sobre «Detalles del mensaje» en mensajes entregados con «remitente confidencial». «Remitente confidencial» es una característica del protocolo de Signal que impide saber a nuestro servidor quién envía el mensaje. La persona que lo recibe sí lo sabrá.</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Muestra el icono de estado al tocar sobre «Detalles del mensaje» en mensajes entregados con «remitente confidencial». «Remitente confidencial» es una función del protocolo de Signal que impide saber a nuestro servidor quién envía el mensaje. La persona que lo recibe sí lo sabrá.</string>
   <string name="preferences_communication__sealed_sender_allow_from_anyone">Permitir de cualquiera</string>
-  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Activar la opción permite usar la característica de «remitente confidencial» con personas que no están entre tus contactos y con las que no has compartido tu perfil.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Activar la opción permite usar la función de «remitente confidencial» con personas que no están entre tus contactos y con las que no has compartido tu perfil.</string>
   <string name="preferences_communication__sealed_sender_learn_more">Saber más</string>
   <string name="preferences_notifications__mentions">Menciones</string>
   <string name="preferences_notifications__notify_me">Notificarme</string>
@@ -2034,6 +2059,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--media_preview-->
   <string name="media_preview__save_title">Guardar</string>
   <string name="media_preview__forward_title">Avanzar</string>
+  <string name="media_preview__share_title">Compartir</string>
   <string name="media_preview__all_media_title">Archivos multimedia</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Previsualizar multimedia</string>
@@ -2053,7 +2079,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="InsightsDashboardFragment__not_enough_data">No hay datos suficientes</string>
   <string name="InsightsDashboardFragment__your_insights_percentage_is_calculated_based_on">Este porcentaje se calcula con los mensajes enviados durante los últimos %1$d días que no han desaparecido o se han eliminado.</string>
   <string name="InsightsDashboardFragment__start_a_conversation">Comienza un chat</string>
-  <string name="InsightsDashboardFragment__invite_your_contacts">Comienza a comunicarte de manera segura con las características de Signal que van más allá de SMS sin cifrar e invita a tus amistades a comunicarse con Signal.</string>
+  <string name="InsightsDashboardFragment__invite_your_contacts">Comienza a comunicarte de manera segura con las funciones de Signal que van más allá de SMS sin cifrar e invita a tus amistades a comunicarse con Signal.</string>
   <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Esta cifra se ha generado en este dispositivo y sólo tú puedes verla. No se envía a ningún servidor.</string>
   <string name="InsightsDashboardFragment__encrypted_messages">Mensajes cifrados</string>
   <string name="InsightsDashboardFragment__cancel">Cancelar</string>
@@ -2286,7 +2312,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockDialog_registration_lock_is_enabled_for_your_phone_number">El bloqueo de registro está activado para tu cuenta. Para ayudarte a memorizar el PIN de bloqueo de registro, te lo solicitaremos periódicamente.</string>
   <string name="RegistrationLockDialog_i_forgot_my_pin">Olvidé mi PIN.</string>
   <string name="RegistrationLockDialog_forgotten_pin">¿Has olvidado el PIN?</string>
-  <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">El bloqueo de registro ayuda a proteger tu número de teléfono de intentos de registro no autorizados. Esta característica se puede desactivar en cualquier momento en la configuración de privacidad de Signal.</string>
+  <string name="RegistrationLockDialog_registration_lock_helps_protect_your_phone_number_from_unauthorized_registration_attempts">El bloqueo de registro ayuda a proteger tu número de teléfono de intentos de registro no autorizados. Esta función se puede desactivar en cualquier momento en la configuración de privacidad de Signal.</string>
   <string name="RegistrationLockDialog_registration_lock">Bloqueo de registro</string>
   <string name="RegistrationLockDialog_enable">Activar</string>
   <string name="RegistrationLockDialog_the_registration_lock_pin_must_be_at_least_d_digits">El PIN de bloqueo de registro debe tener al menos %d digitos.</string>
@@ -2327,7 +2353,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <!--GroupsLearnMoreBottomSheetDialogFragment-->
   <string name="GroupsLearnMore_legacy_vs_new_groups">Grupos nuevos y antiguos</string>
   <string name="GroupsLearnMore_what_are_legacy_groups">¿Qué son los grupos antiguos?</string>
-  <string name="GroupsLearnMore_paragraph_1">Los grupos antiguos no son compatibles con las características de los grupos nuevos como admins o actualizaciones más descriptivas.</string>
+  <string name="GroupsLearnMore_paragraph_1">Los grupos antiguos no son compatibles con las funciones de los grupos nuevos como admins o actualizaciones más descriptivas.</string>
   <string name="GroupsLearnMore_can_i_upgrade_a_legacy_group">¿Cómo actualizo un grupo antiguo?</string>
   <string name="GroupsLearnMore_paragraph_2">Los grupos antiguos todavía no pueden convertirse en grupos nuevos, pero puedes crear un grupo nuevo con la misma gente, si tod@s usan la versión más reciente de Signal.</string>
   <string name="GroupsLearnMore_paragraph_3">Signal ofrecerá la manera de actualizar un grupo antiguo en el futuro.</string>
@@ -2345,5 +2371,32 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s de %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Revisar participantes</string>
+  <string name="ReviewCardDialogFragment__review_request">Revisar solicitud</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d participantes usan el mismo nombre, revisa la lista de participantes debajo y selecciona la opción correcta.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Si no estás segur@ a quién pertenece esta solicitud, revisa la lista de personas debajo para tomar la decisión correcta.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">No hay otros grupos en común.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">No hay grupos en común.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d grupo en común</item>
+    <item quantity="other">%d grupos en común.</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d grupo en común</item>
+    <item quantity="other">%d grupos en común</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">¿Expulsar a %1$s del grupo?</string>
+  <string name="ReviewCardDialogFragment__remove">Eliminar</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Fallo al expulsar a un@ participante del grupo.</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Participante</string>
+  <string name="ReviewCard__request">Solicitud</string>
+  <string name="ReviewCard__your_contact">Tu contacto</string>
+  <string name="ReviewCard__remove_from_group">Expulsar del grupo</string>
+  <string name="ReviewCard__update_contact">Actualizar contacto</string>
+  <string name="ReviewCard__block">Bloquear</string>
+  <string name="ReviewCard__delete">Eliminar</string>
+  <string name="ReviewCard__recently_changed">Ha cambiado su nombre de perfil recientemente de %1$s a %2$s</string>
   <!--EOF-->
 </resources>
