--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -443,6 +443,7 @@
   <string name="GroupManagement_invite_single_user">“%1$s” ei saa sinu poolt automaatselt gruppi lisada.\n\nNad on kutsutud grupiga ühinema ja ei näe grupi sõnumeid enne kui on ühinemisega nõustunud.</string>
   <string name="GroupManagement_learn_more">Rohkem infot</string>
   <string name="GroupManagement_invite_multiple_users">Neid kasutajaid ei saa sinu poolt automaatselt gruppi lisada.\n\nNad on kutsutud grupiga ühinema ja ei näe grupi sõnumeid enne kui on ühinemisega nõustunud.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Lahkud grupist?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Sul pole enam võimalik saata ega saada selle grupi sõnumeid.</string>
@@ -780,7 +781,6 @@
   <string name="MessageRecord_you_updated_group">Sa uuendasid gruppi.</string>
   <string name="MessageRecord_the_group_was_updated">Grupp on uuendatud.</string>
   <string name="MessageRecord_you_called_date">Sa helistasid · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Vastamata kõne · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s uuendas gruppi.</string>
   <string name="MessageRecord_s_called_you_date">%1$s helistas sulle · %2$s</string>
   <string name="MessageRecord_called_s">Helistasid kontaktile %s</string>
@@ -1170,7 +1170,8 @@
   <string name="ThreadRecord_draft">Mustand:</string>
   <string name="ThreadRecord_called">Sa helistasid</string>
   <string name="ThreadRecord_called_you">Helistas sulle</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Vastamata kõne</string> -->
+  <string name="ThreadRecord_missed_audio_call">Vastamata häälkõne</string>
+  <string name="ThreadRecord_missed_video_call">Vastamata videokõne</string>
   <string name="ThreadRecord_media_message">Meediasõnum</string>
   <string name="ThreadRecord_sticker">Kleeps</string>
   <string name="ThreadRecord_view_once_photo">Korra vaatamise foto</string>
@@ -1452,6 +1453,7 @@
   <string name="conversation_item_received__contact_photo_description">Kontakti foto</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Laadimine</string>
+  <string name="ConversationUpdateItem_learn_more">Rohkem infot</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Esita … Peata</string>
   <string name="audio_view__download_accessibility_description">Laadi alla</string>
@@ -1960,6 +1962,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">Salvesta</string>
   <string name="media_preview__forward_title">Edasta</string>
+  <string name="media_preview__share_title">Jaga</string>
   <string name="media_preview__all_media_title">Kogu meedia</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Meedia eelvaade</string>
@@ -2258,5 +2261,12 @@
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s saajale %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Eemalda</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Liige</string>
+  <string name="ReviewCard__remove_from_group">Eemalda grupist</string>
+  <string name="ReviewCard__block">Blokeeri</string>
+  <string name="ReviewCard__delete">Kustuta</string>
   <!--EOF-->
 </resources>
