--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">فایل‌های رسانه‌ای یکبار مصرف خروجی، پس از ارسال به صورت خودکار حذف می‌شوند</string>
   <string name="ConversationFragment_you_already_viewed_this_message">شما قبلاً این پیام را مشاهده کردید</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">در این مکالمه می‌توانید برای خودتان یادداشت اضافه کنید. اگر حساب‌تان به دستگاه‌‌های دیگری پیوند داده شده باشد، یادداشت‌های جدید همگام‌سازی خواهند شد.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d نفر از اعضای گروه نام یکسان دارند.</string>
+  <string name="ConversationFragment__tap_to_review">برای بازنگری ضربه بزنید</string>
+  <string name="ConversationFragment__review_requests_carefully">درخواست‌ها را با دقت بازنگری کنید</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal مخاطب دیگری را با نام یکسان پیدا کرد.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">هیچ مرورگری بر روی دستگاه شما نصب نیست.</string>
   <!--ConversationListFragment-->
@@ -453,6 +457,18 @@
   <string name="GroupManagement_invite_single_user">«%1$s» نمی‌تواند به صورت خودکار توسط شما به این گروه اضافه شود.\n\nآن‌ها برای پیوستن دعوت شده‌اند و پیام‌های گروهی را تا زمانی که دعوت را نپذیرند، نخواهند دید.</string>
   <string name="GroupManagement_learn_more">بیشتر یاد بگیرید</string>
   <string name="GroupManagement_invite_multiple_users">این کاربران نمی‌توانند به صورت خودکار توسط شما به این گروه اضافه شوند.\n\nآن‌ها برای پیوستن به گروه دعوت شده‌اند و پیام‌های گروهی را تا زمانی که دعوت را بپذیرند، نخواهند دید.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">گروه‌های جدید چیستند؟</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">گروه‌های جدید دارای قابلیت‌هایی مانند @اشاره‌ها و مدیران گروه هستند و از قابلیت‌های بیشتری در آینده پشتیبانی خواهند کرد.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">تمام تاریخچهٔ گروه و رسانه‌های پیش از ارتقا حفظ شده‌اند.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">این عضو نیاز به پذیرفتن دعوت برای</item>
+    <item quantity="other">این اعضا نیاز به پذیرفتن دعوت برای پیوستن به گروه خواهند داشت و پیام‌های گروه را تا زمانی که بپذیرند دریافت نخواهند کرد:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">این عضو قابلیت پیوستن به گروه‌های جدید را ندارد، و از گروه حذف شده است.</item>
+    <item quantity="other">این اعضا قابلیت پیوستن به گروه‌های جدید را ندارند و از گروه حذف شده‌اند.</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">ترک گروه؟</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">شما دیگر قادر به ارسال یا دریافت پیام از این گروه نخواهید بود</string>
@@ -806,7 +822,8 @@
   <string name="MessageRecord_you_updated_group">شما گروه را به‌روزرسانی کردید.</string>
   <string name="MessageRecord_the_group_was_updated">گروه به‌روزرسانی شد.</string>
   <string name="MessageRecord_you_called_date">شما تماس گرفتید · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">تماس از دست رفته · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">تماس صوتی از دست رفته · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">تماس تصویری از دست رفته · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s گروه را به‌روزرسانی کرد.</string>
   <string name="MessageRecord_s_called_you_date">%1$s با شما تماس گرفت · %2$s</string>
   <string name="MessageRecord_called_s">با %s تماس گرفته شد</string>
@@ -816,6 +833,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">شما زمان‌سنج پیام‌ ناپدید شونده را روی %1$s تنظیم کردید.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s زمان‌سنج پیام ناپدید شونده را روی %2$s تنظیم کرد.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">زمان‌سنج پیام ناپدید شونده روی %1$s تنظیم شد.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">این گروه به یک گروه جدید به‌روزرسانی شد.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s عضو نمی‌تواند به گروه جدید اضافه شود و برای پیوستن دعوت شد‌‌.</item>
+    <item quantity="other">%1$s عضو نمی‌توانند به گروه جدید اضافه شوند و برای پیوستن دعوت شد‌‌ند.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s نام پروفایل خود را به %2$s تغییر داد.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s نام پروفایل خود را از %2$s  به %3$s تغییر داد.</string>
@@ -1231,7 +1253,8 @@
   <string name="ThreadRecord_draft">پیش‌نویس:</string>
   <string name="ThreadRecord_called">شما تماس گرفتید</string>
   <string name="ThreadRecord_called_you">با شما تماس گرفت</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">تماس از دست رفته</string> -->
+  <string name="ThreadRecord_missed_audio_call">تماس صوتی از دست رفته</string>
+  <string name="ThreadRecord_missed_video_call">تماس تصویری از دست رفته</string>
   <string name="ThreadRecord_media_message">پیام رسانه‌ای</string>
   <string name="ThreadRecord_sticker">استیکر</string>
   <string name="ThreadRecord_view_once_photo">عکس یکبار مصرف</string>
@@ -1326,6 +1349,7 @@
   <string name="MediaPreviewActivity_media_delete_confirmation_message">این گزینه این پیام را به طور دائم حذف خواهد کرد.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s به %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">رسانه دیگر در دسترس نیست.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">برنامه‌ای برای اشتراک‌گذاری این رسانه پیدا نشد.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d پیام جدید در %2$d مکالمه</string>
   <string name="MessageNotifier_most_recent_from_s">جدیدترین از: %1$s</string>
@@ -1518,6 +1542,7 @@
   <string name="conversation_item_received__contact_photo_description">تصویر مخاطب</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">در حال بارگذاری</string>
+  <string name="ConversationUpdateItem_learn_more">بیشتر یاد بگیرید</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">پخش … وقفه</string>
   <string name="audio_view__download_accessibility_description">دریافت</string>
@@ -1880,7 +1905,7 @@
   <string name="preferences_storage__videos">ویدئو‌ها</string>
   <string name="preferences_storage__files">فایل‌ها</string>
   <string name="preferences_storage__audio">صوت</string>
-  <string name="preferences_storage__review_storage">بازبینی حافظه</string>
+  <string name="preferences_storage__review_storage">بازنگری حافظه</string>
   <string name="preferences_storage__delete_older_messages">حذف پیام‌های قدیمی‌تر؟</string>
   <string name="preferences_storage__clear_message_history">پاک کردن تاریخچهٔ پیام‌؟</string>
   <string name="preferences_storage__this_will_permanently_delete_all_message_history_and_media">این گزینه تمامی تاریخچهٔ پیام و رسانه را که از %1$s قدیمی‌تراند از روی دستگاه شما پاک می‌کند.</string>
@@ -2031,6 +2056,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">ذخیره</string>
   <string name="media_preview__forward_title">ارسال</string>
+  <string name="media_preview__share_title">اشتراک‌گذاری</string>
   <string name="media_preview__all_media_title">همهٔ رسانه‌ها</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">پیش‌نمایش رسانه‌</string>
@@ -2342,5 +2368,32 @@
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s به %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">بازبینی اعضا</string>
+  <string name="ReviewCardDialogFragment__review_request">بازبینی درخواست</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d عضو گروه نام یکسان دارند، اعضا را در پایین مرور کنید و اقدام لازم را انجام دهید.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">اگر مطمئن نیستید که فرستندهٔ درخواست چه کسی است، مخاطبین را در پایین مرور کنید و اقدام لازم را انجام دهید.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">هیچ گروه مشترک دیگری وجود ندارد.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">هیچ گروه مشترکی وجود ندارد.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d گروه مشترک</item>
+    <item quantity="other">%d گروه مشترک</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d گروه مشترک</item>
+    <item quantity="other">%d گروه مشترک</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">حذف %1$s از گروه؟</string>
+  <string name="ReviewCardDialogFragment__remove">حذف</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">حذف عضو گروه موفق نبود.</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">عضو</string>
+  <string name="ReviewCard__request">درخواست</string>
+  <string name="ReviewCard__your_contact">مخاطب شما</string>
+  <string name="ReviewCard__remove_from_group">حذف از گروه</string>
+  <string name="ReviewCard__update_contact">به‌روزرسانی مخاطب</string>
+  <string name="ReviewCard__block">مسدود کردن</string>
+  <string name="ReviewCard__delete">حذف</string>
+  <string name="ReviewCard__recently_changed">اخیراً نام پروفایل خود را از %1$s به %2$s تغییر داد</string>
   <!--EOF-->
 </resources>
