--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -452,6 +452,7 @@
   <string name="GroupManagement_invite_single_user">Et voi lisätä käyttäjää \"%1$s\" automaattisesti tähän ryhmään.\n\nHeidät on kutsuttu liittymään, eivätkä näe ryhmäviestejä ennen kuin he hyväksyvät kutsun.</string>
   <string name="GroupManagement_learn_more">Lue lisää</string>
   <string name="GroupManagement_invite_multiple_users">Et voi lisätä näitä käyttäjiä automaattisesti tähän ryhmään.\n\nHeidät on kutsuttu liittymään, eivätkä näe ryhmäviestejä ennen kuin he hyväksyvät kutsun.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Poistu ryhmästä?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Et voi enää lähettää tai vastaanottaa viestejä tässä ryhmässä.</string>
@@ -805,7 +806,6 @@
   <string name="MessageRecord_you_updated_group">Sinä päivitit ryhmää.</string>
   <string name="MessageRecord_the_group_was_updated">Ryhmä päivitettiin.</string>
   <string name="MessageRecord_you_called_date">Soitit puhelun · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Vastaamaton puhelu · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s päivitti ryhmää.</string>
   <string name="MessageRecord_s_called_you_date">%1$s soitti sinulle · %2$s</string>
   <string name="MessageRecord_called_s">Soitit puhelun: %s</string>
@@ -1226,7 +1226,8 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="ThreadRecord_draft">Luonnos:</string>
   <string name="ThreadRecord_called">Soitit puhelun</string>
   <string name="ThreadRecord_called_you">Soitti sinulle</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Vastaamatta jäänyt puhelu</string> -->
+  <string name="ThreadRecord_missed_audio_call">Vastaamatta jäänyt äänipuhelu</string>
+  <string name="ThreadRecord_missed_video_call">Vastaamatta jäänyt videopuhelu</string>
   <string name="ThreadRecord_media_message">Mediaviesti</string>
   <string name="ThreadRecord_sticker">Tarra</string>
   <string name="ThreadRecord_view_once_photo">Kerran katsottava kuva</string>
@@ -1513,6 +1514,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="conversation_item_received__contact_photo_description">Yhteystiedon kuva</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Ladataan</string>
+  <string name="ConversationUpdateItem_learn_more">Lue lisää</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Pelaa … Tauko</string>
   <string name="audio_view__download_accessibility_description">Lataa</string>
@@ -2026,6 +2028,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <!--media_preview-->
   <string name="media_preview__save_title">Tallenna</string>
   <string name="media_preview__forward_title">Välitä</string>
+  <string name="media_preview__share_title">Jaa</string>
   <string name="media_preview__all_media_title">Kaikki mediatiedostot</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Liitteen esikatselu</string>
@@ -2337,5 +2340,12 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s henkilölle %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Poista</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Jäsen</string>
+  <string name="ReviewCard__remove_from_group">Poista ryhmästä</string>
+  <string name="ReviewCard__block">Estä</string>
+  <string name="ReviewCard__delete">Poista</string>
   <!--EOF-->
 </resources>
