--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -469,6 +469,7 @@
   <string name="GroupManagement_invite_single_user">Ne možete automatski dodati \"%1$s\" u grupu.\n\nKorisnik je pozvan i neće vidjeti poruke grupe dok ne prihvati pozivnicu.</string>
   <string name="GroupManagement_learn_more">Saznaj više</string>
   <string name="GroupManagement_invite_multiple_users">Ne možete automatski dodati ove korisnike u grupu.\n\nKorisnik je pozvan u grupu i neće vidjeti poruke grupe dok ne prihvati pozivnicu.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Napusti grupu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nećete više biti u mogućnosti slati i primati poruke u ovoj grupi.</string>
@@ -841,7 +842,6 @@
   <string name="MessageRecord_you_updated_group">Ažurirali ste grupu.</string>
   <string name="MessageRecord_the_group_was_updated">Grupa je ažurirana.</string>
   <string name="MessageRecord_you_called_date">Vi ste zvali · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Propušteni poziv · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s je ažurirao grupu.</string>
   <string name="MessageRecord_s_called_you_date">%1$s vas je zvao/la · %2$s</string>
   <string name="MessageRecord_called_s">Nazvali ste %s</string>
@@ -1277,7 +1277,8 @@ broj telefona</string>
   <string name="ThreadRecord_draft">Skica:</string>
   <string name="ThreadRecord_called">Zvali ste</string>
   <string name="ThreadRecord_called_you">Nazvao/la vas je</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Propušteni poziv</string> -->
+  <string name="ThreadRecord_missed_audio_call">Propušteni zvučni poziv</string>
+  <string name="ThreadRecord_missed_video_call">Propušteni video poziv</string>
   <string name="ThreadRecord_media_message">Poruka s medijskim zapisom</string>
   <string name="ThreadRecord_sticker">Naljepnica</string>
   <string name="ThreadRecord_view_once_photo">Jednom vidljiva slika</string>
@@ -1567,6 +1568,7 @@ broj telefona</string>
   <string name="conversation_item_received__contact_photo_description">Slika kontakta</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Učitavanje</string>
+  <string name="ConversationUpdateItem_learn_more">Saznaj više</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Reproduciraj … Pauziraj</string>
   <string name="audio_view__download_accessibility_description">Preuzmi</string>
@@ -2089,6 +2091,7 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <!--media_preview-->
   <string name="media_preview__save_title">Spremi</string>
   <string name="media_preview__forward_title">Naprijed</string>
+  <string name="media_preview__share_title">Podijeli</string>
   <string name="media_preview__all_media_title">Svi medijski zapisi</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Pregled medijskog zapisa</string>
@@ -2407,5 +2410,12 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s za %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Ukloni</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Član</string>
+  <string name="ReviewCard__remove_from_group">Ukloni iz grupe</string>
+  <string name="ReviewCard__block">Blokiraj</string>
+  <string name="ReviewCard__delete">Izbriši</string>
   <!--EOF-->
 </resources>
