--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -454,6 +454,7 @@
   <string name="GroupManagement_invite_single_user">Nem lehet \"%1$s\" nevű kontaktodat automatikusan a csoporthoz adni.\n\nBár már meg lett hívva, addig mégsem láthatja az csoportüzeneteket, míg el nem fogadja a meghívást.</string>
   <string name="GroupManagement_learn_more">További információ</string>
   <string name="GroupManagement_invite_multiple_users">Ezeket a felhasználókat nem lehet automatikusan a csoporthoz adni.\n\nBár már meg lettek hívva, addig mégsem láthatják a csoportüzeneteket, míg el nem fogadják a meghívást.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Kilépsz a csoportból?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Többé nem tudsz küldeni vagy fogadni üzeneteket és hívásokat ebben a csoportban.</string>
@@ -807,7 +808,6 @@
   <string name="MessageRecord_you_updated_group">Frissítetted a csoportot.</string>
   <string name="MessageRecord_the_group_was_updated">A csoport frissítve lett.</string>
   <string name="MessageRecord_you_called_date">Te hívtad · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Nem fogadott hívás · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s frissítette a csoportot.</string>
   <string name="MessageRecord_s_called_you_date">%1$s hívott téged · %2$s</string>
   <string name="MessageRecord_called_s">Kimenő hívás: %s</string>
@@ -1235,7 +1235,8 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="ThreadRecord_draft">Piszkozat:</string>
   <string name="ThreadRecord_called">Te hívtad</string>
   <string name="ThreadRecord_called_you">Hívott téged</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Nem fogadott hívás</string> -->
+  <string name="ThreadRecord_missed_audio_call">Nem fogadott hívás</string>
+  <string name="ThreadRecord_missed_video_call">Nem fogadott videóhívás</string>
   <string name="ThreadRecord_media_message">Média üzenet</string>
   <string name="ThreadRecord_sticker">Matrica</string>
   <string name="ThreadRecord_view_once_photo">Egyszer megjelenő fotó</string>
@@ -1523,6 +1524,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="conversation_item_received__contact_photo_description">Kontakt fotó</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Betöltés</string>
+  <string name="ConversationUpdateItem_learn_more">További információ</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Lejátszás … Szünet</string>
   <string name="audio_view__download_accessibility_description">Letöltés</string>
@@ -2036,6 +2038,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <!--media_preview-->
   <string name="media_preview__save_title">Mentés</string>
   <string name="media_preview__forward_title">Továbbítás</string>
+  <string name="media_preview__share_title">Megosztás</string>
   <string name="media_preview__all_media_title">Összes médiafájl</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Média előnézet</string>
@@ -2347,5 +2350,12 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s (címzett: %2$s)</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Eltávolítás</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Tag</string>
+  <string name="ReviewCard__remove_from_group">Eltávolítás a csoportból</string>
+  <string name="ReviewCard__block">Letiltás</string>
+  <string name="ReviewCard__delete">Törlés</string>
   <!--EOF-->
 </resources>
