--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -315,6 +315,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">קבצי מדיה יוצאים לצפייה חד־פעמית מוסרים באופן אוטומטי לאחר שהם נשלחים</string>
   <string name="ConversationFragment_you_already_viewed_this_message">צפית כבר בהודעה זו</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">אתה יכול להוסיף הערות לעצמך בשיחה זו.\nאם לחשבון שלך יש מכשירים מקושרים כלשהם, הערות חדשות יסונכרנו.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">אל %1$d חברי קבוצה יש אותו שם.</string>
+  <string name="ConversationFragment__tap_to_review">הקש כדי לסקור</string>
+  <string name="ConversationFragment__review_requests_carefully">סקור בקשות בזהירות</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal מצא איש קשר אחר עם אותו שם.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">אין דפדפן מותקן במכשיר שלך.</string>
   <!--ConversationListFragment-->
@@ -485,6 +489,22 @@
   <string name="GroupManagement_invite_single_user">“%1$s” אינו יכול להתווסף באופן אוטומטי אל קבוצה זו על ידך.\n\nהוא הוזמן להצטרף, ולא יראה הודעות קבוצה כלשהן עד שהוא יסכים.</string>
   <string name="GroupManagement_learn_more">למד עוד</string>
   <string name="GroupManagement_invite_multiple_users">משתמשים אלו אינם יכולים להתווסף באופן אוטומטי אל קבוצה זו על ידך.\n\nהם הוזמנו להצטרף אל הקבוצה, ולא יראו הודעות קבוצה כלשהן עד שהם יסכימו.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">מהן קבוצות חדשות?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">לקבוצות חדשות יש מאפיינים כמו @אזכורים ומנהלני קבוצה, ויתמכו במאפיינים נוספים בעתיד.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">כל היסטורית ההודעות וכל המדיה נשמרו מלפני השדרוג.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">חבר קבוצה זה יצטרך לאשר הזמנה כדי להצטרף אל קבוצה זו שוב והוא לא יקבל הודעות קבוצה עד שהוא יאשר:</item>
+    <item quantity="two">חברי קבוצה אלו יצטרכו לאשר הזמנה כדי להצטרף אל קבוצה זו שוב והם לא יקבלו הודעות קבוצה עד שהם יאשרו:</item>
+    <item quantity="many">חברי קבוצה אלו יצטרכו לאשר הזמנה כדי להצטרף אל קבוצה זו שוב והם לא יקבלו הודעות קבוצה עד שהם יאשרו:</item>
+    <item quantity="other">חברי קבוצה אלו יצטרכו לאשר הזמנה כדי להצטרף אל קבוצה זו שוב והם לא יקבלו הודעות קבוצה עד שהם יאשרו:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">חבר קבוצה זה אינו מסוגל להצטרף אל קבוצות חדשות, והוא הוסר מהקבוצה:</item>
+    <item quantity="two">חברי קבוצה אלו אינם מסוגלים להצטרף אל קבוצות חדשות, והם הוסרו מהקבוצה:</item>
+    <item quantity="many">חברי קבוצה אלו אינם מסוגלים להצטרף אל קבוצות חדשות, והם הוסרו מהקבוצה:</item>
+    <item quantity="other">חברי קבוצה אלו אינם מסוגלים להצטרף אל קבוצות חדשות, והם הוסרו מהקבוצה:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">לעזוב קבוצה?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">לא תוכל יותר לשלוח או לקבל הודעות בקבוצה זו.</string>
@@ -876,7 +896,8 @@
   <string name="MessageRecord_you_updated_group">עדכנת את הקבוצה.</string>
   <string name="MessageRecord_the_group_was_updated">הקבוצה עודכנה.</string>
   <string name="MessageRecord_you_called_date">את/ה התקשרת · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">שיחה שלא נענתה · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">שיחת שמע שלא נענתה · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">שיחת וידאו שלא נענתה · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s עדכן את הקבוצה.</string>
   <string name="MessageRecord_s_called_you_date">%1$s התקשר/ה אליך · %2$s</string>
   <string name="MessageRecord_called_s">התקשרת אל %s</string>
@@ -886,6 +907,13 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">הִגְדַּרְתָּ את קוצב הזמן של ההודעות הנעלמות אל %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$sהגדיר את קוצב הזמן של ההודעות הנעלמות אל %2$s. </string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">קוצב הזמן של ההודעות הנעלמות הוגדר אל %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">קבוצה זו עודכנה אל קבוצה חדשה.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">חבר קבוצה %1$s לא היה יכול להתווסף אל הקבוצה החדשה והם הוזמנו להצטרף.</item>
+    <item quantity="two">%1$s חברי קבוצה לא יכלו להתווסף אל הקבוצה החדשה והם הוזמנו להצטרף.</item>
+    <item quantity="many">%1$s חברי קבוצה לא יכלו להתווסף אל הקבוצה החדשה והם הוזמנו להצטרף.</item>
+    <item quantity="other">%1$s חברי קבוצה לא יכלו להתווסף אל הקבוצה החדשה והם הוזמנו להצטרף.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s שינה/שינתה את שם הפרופיל שלו/שלה אל %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s שינה/שינתה את שם הפרופיל שלו/שלה מן %2$s אל %3$s.</string>
@@ -1327,7 +1355,8 @@
   <string name="ThreadRecord_draft">טיוטה:</string>
   <string name="ThreadRecord_called">התקשרת</string>
   <string name="ThreadRecord_called_you">התקשר אליך</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">שיחה שלא נענתה</string> -->
+  <string name="ThreadRecord_missed_audio_call">שיחת שמע שלא נענתה</string>
+  <string name="ThreadRecord_missed_video_call">שיחת וידאו שלא נענתה</string>
   <string name="ThreadRecord_media_message">הודעת מדיה</string>
   <string name="ThreadRecord_sticker">מדבקה</string>
   <string name="ThreadRecord_view_once_photo">תמונה לצפייה חד־פעמית</string>
@@ -1422,6 +1451,7 @@
   <string name="MediaPreviewActivity_media_delete_confirmation_message">זה ימחק לצמיתות הודעה זו.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s אל %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">מדיה אינה זמינה יותר.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">לא ניתן למצוא יישום שמסוגל לשתף מדיה זו.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d הודעות חדשות ב־%2$d שיחות</string>
   <string name="MessageNotifier_most_recent_from_s">הודעה אחרונה מאת: %1$s</string>
@@ -1620,6 +1650,7 @@
   <string name="conversation_item_received__contact_photo_description">תמונת איש קשר</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">טוען</string>
+  <string name="ConversationUpdateItem_learn_more">למד עוד</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">נגן … השהה</string>
   <string name="audio_view__download_accessibility_description">הורד</string>
@@ -2149,6 +2180,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">שמור</string>
   <string name="media_preview__forward_title">העבר הלאה</string>
+  <string name="media_preview__share_title">שתף</string>
   <string name="media_preview__all_media_title">כל המדיה</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">קדם־תצוגה של מדיה</string>
@@ -2474,5 +2506,36 @@
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s אל %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">סקור חברי קבוצה</string>
+  <string name="ReviewCardDialogFragment__review_request">סקור בקשה</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">אל %1$d חברי קבוצה יש אותו שם, סקור את חברי הקבוצה למטה ובחר לנקוט בפעולה.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">אם אינך בטוח ממי הבקשה, סקור את חברי הקבוצה למטה ונקוט בפעולה.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">אין קבוצות אחרות במשותף.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">אין קבוצות במשותף.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">קבוצה %d במשותף</item>
+    <item quantity="two">%d קבוצות במשותף</item>
+    <item quantity="many">%d קבוצות במשותף</item>
+    <item quantity="other">%d קבוצות במשותף</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">קבוצה %d במשותף</item>
+    <item quantity="two">%d קבוצות במשותף</item>
+    <item quantity="many">%d קבוצות במשותף</item>
+    <item quantity="other">%d קבוצות במשותף</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">להסיר את %1$s מהקבוצה?</string>
+  <string name="ReviewCardDialogFragment__remove">הסר</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">כישלון בהסרת חבר קבוצה.</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">חבר קבוצה</string>
+  <string name="ReviewCard__request">בקשה</string>
+  <string name="ReviewCard__your_contact">איש הקשר שלך</string>
+  <string name="ReviewCard__remove_from_group">הסר מהקבוצה</string>
+  <string name="ReviewCard__update_contact">עדכן איש קשר</string>
+  <string name="ReviewCard__block">חסום</string>
+  <string name="ReviewCard__delete">מחק</string>
+  <string name="ReviewCard__recently_changed">שינה/שינתה לאחרונה את שם הפרופיל מן %1$s אל %2$s</string>
   <!--EOF-->
 </resources>
