--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -437,6 +437,9 @@
   <string name="GroupManagement_invite_single_user">「%1$s」を自動的にこのグループに追加することはできません。\n\nユーザは招待を受け入れるまで、グループメッセージを閲覧できません。</string>
   <string name="GroupManagement_learn_more">詳しく見る</string>
   <string name="GroupManagement_invite_multiple_users">これらのユーザをを自動的にこのグループに追加することはできません。\n\nユーザは招待を受け入れるまで、グループメッセージを閲覧できません。</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">新しいグループとは？</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">すべてのメッセージ履歴とメディアは、アップグレード前から維持されています。</string>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">グループを抜けますか？</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">このグループでのメッセージ送受信ができなくなります。</string>
@@ -771,7 +774,8 @@
   <string name="MessageRecord_you_updated_group">グループを更新しました。</string>
   <string name="MessageRecord_the_group_was_updated">グループが更新されました。</string>
   <string name="MessageRecord_you_called_date">発信 · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">不在着信 · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">音声通話着信あり · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">ビデオ通話着信あり · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s がグループを更新しました。</string>
   <string name="MessageRecord_s_called_you_date">%1$s から着信 · %2$s</string>
   <string name="MessageRecord_called_s">%s に発信</string>
@@ -781,6 +785,7 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">消えるメッセージのタイマーを%1$sに設定しました。</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s が消えるメッセージのタイマーを%2$sに設定しました。</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">消えるメッセージのタイマーが%1$sに設定されました。</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">このグループは新しいグループにアップデートされました。</string>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s がプロフィール名を %2$s に変更しました。</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s がプロフィール名を %2$s から %3$s に変更しました。</string>
@@ -1176,7 +1181,8 @@
   <string name="ThreadRecord_draft">下書き:</string>
   <string name="ThreadRecord_called">発信</string>
   <string name="ThreadRecord_called_you">着信</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">不在着信</string> -->
+  <string name="ThreadRecord_missed_audio_call">音声通話着信あり</string>
+  <string name="ThreadRecord_missed_video_call">ビデオ通話着信あり</string>
   <string name="ThreadRecord_media_message">メディアメッセージ</string>
   <string name="ThreadRecord_sticker">ステッカー</string>
   <string name="ThreadRecord_view_once_photo">使い捨て写真</string>
@@ -1271,6 +1277,7 @@
   <string name="MediaPreviewActivity_media_delete_confirmation_message">このメッセージを完全に削除します。</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s から %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">メディアが存在しません。</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">このメディアを共有できるアプリが見つかりません。</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%2$d個の会話に%1$d件の新着メッセージ</string>
   <string name="MessageNotifier_most_recent_from_s">最新の受信: %1$s</string>
@@ -1460,6 +1467,7 @@
   <string name="conversation_item_received__contact_photo_description">連絡先の写真</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">読み込んでいます</string>
+  <string name="ConversationUpdateItem_learn_more">詳しく見る</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">再生 … 停止</string>
   <string name="audio_view__download_accessibility_description">ダウンロード</string>
@@ -1965,6 +1973,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">保存</string>
   <string name="media_preview__forward_title">転送</string>
+  <string name="media_preview__share_title">共有する</string>
   <string name="media_preview__all_media_title">すべてのメディア</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">メディアのプレビュー</string>
@@ -2269,5 +2278,17 @@
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s から %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">メンバーを確認してください</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d人のグループメンバーが同じ名前です。以下のメンバーを確認して、対応してください。</string>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">%1$s をグループから削除しますか？</string>
+  <string name="ReviewCardDialogFragment__remove">消去</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">グループメンバーの削除に失敗しました。</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">メンバー</string>
+  <string name="ReviewCard__your_contact">あなたの連絡先</string>
+  <string name="ReviewCard__remove_from_group">グループから削除</string>
+  <string name="ReviewCard__block">ブロックする</string>
+  <string name="ReviewCard__delete">削除する</string>
   <!--EOF-->
 </resources>
