--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -422,6 +422,7 @@
     <item quantity="other">%d에게 초대가 전송됨</item>
   </plurals>
   <string name="GroupManagement_learn_more">더 알아보기</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">그룹을 탈퇴하시겠습니까?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">이 그룹에서 메시지를 보내거나 받을 수 없게 됩니다.</string>
@@ -1017,7 +1018,6 @@
   <string name="ThreadRecord_draft">초안:</string>
   <string name="ThreadRecord_called">발신 전화</string>
   <string name="ThreadRecord_called_you">수신 전화</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">부재중 전화</string> -->
   <string name="ThreadRecord_media_message">미디어 메시지</string>
   <string name="ThreadRecord_sticker">스티커</string>
   <string name="ThreadRecord_view_once_photo">한 번 볼 수 있는 이미지</string>
@@ -1281,6 +1281,7 @@
   <string name="conversation_item_received__contact_photo_description">연락처 사진</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">로드 중</string>
+  <string name="ConversationUpdateItem_learn_more">더 알아보기</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">재생 … 일시 정지</string>
   <string name="audio_view__download_accessibility_description">다운로드</string>
@@ -1762,6 +1763,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">저장</string>
   <string name="media_preview__forward_title">전달</string>
+  <string name="media_preview__share_title">공유</string>
   <string name="media_preview__all_media_title">모든 미디어</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">미디어 미리 보기</string>
@@ -2030,5 +2032,12 @@
   <!--VoiceNoteMediaDescriptionCompatFactory-->
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s~%2$s</string>
   <!--StorageUtil-->
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">삭제</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">멤버</string>
+  <string name="ReviewCard__remove_from_group">그룹에서 제외</string>
+  <string name="ReviewCard__block">차단</string>
+  <string name="ReviewCard__delete">삭제</string>
   <!--EOF-->
 </resources>
