--- a/app/src/main/res/values-lv/strings.xml
+++ b/app/src/main/res/values-lv/strings.xml
@@ -414,6 +414,7 @@
   <string name="GroupManagement_access_level_only_admins">Tikai administratori</string>
   <!--GV2 invites sent-->
   <string name="GroupManagement_learn_more">Lasīt vairāk</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Pamest grupu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Jūs vairs nevarēsiet sūtīt vai saņemt ziņas šajā grupā.</string>
@@ -955,7 +956,6 @@ Saņemts nederīgas protokola versijas atslēgas apmaiņas ziņojums.
   <string name="ThreadRecord_draft">Melnraksts:</string>
   <string name="ThreadRecord_called">Jūs zvanijāt</string>
   <string name="ThreadRecord_called_you">Jums zvanīja</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Neatbildēts zvans</string> -->
   <string name="ThreadRecord_media_message">Multivides ziņa</string>
   <string name="ThreadRecord_sticker">Uzlīme</string>
   <string name="ThreadRecord_view_once_photo">Vienreiz skatāms attēls</string>
@@ -1220,6 +1220,7 @@ Saņemts nederīgas protokola versijas atslēgas apmaiņas ziņojums.
   <string name="conversation_item_received__contact_photo_description">Kontakta attēls</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Ielādē</string>
+  <string name="ConversationUpdateItem_learn_more">Lasīt vairāk</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Atskaņot … Pauzēt</string>
   <string name="audio_view__download_accessibility_description">Lejupielādēt</string>
@@ -1693,6 +1694,7 @@ Saņemts nederīgas protokola versijas atslēgas apmaiņas ziņojums.
   <!--media_preview-->
   <string name="media_preview__save_title">Saglabāt</string>
   <string name="media_preview__forward_title">Uz priekšu</string>
+  <string name="media_preview__share_title">Kopīgot</string>
   <string name="media_preview__all_media_title">Visus multimedijus</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Multimediju priekšskats</string>
@@ -1953,5 +1955,12 @@ Saņemts nederīgas protokola versijas atslēgas apmaiņas ziņojums.
   <!--VoiceNoteMediaDescriptionCompatFactory-->
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s %2$s</string>
   <!--StorageUtil-->
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Noņemt/Izņemt</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Dalībnieks</string>
+  <string name="ReviewCard__remove_from_group">Noņemt no grupas</string>
+  <string name="ReviewCard__block">Bloķēt</string>
+  <string name="ReviewCard__delete">Dzēst</string>
   <!--EOF-->
 </resources>
