--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -433,6 +433,7 @@
   <string name="GroupManagement_invite_single_user">“%1$s” kan ikke bli automatisk lagt til denne gruppen av deg.\n\nPersonen har blitt invitert, men vil ikke se noen meldinger til gruppen før invitasjonen godtas.</string>
   <string name="GroupManagement_learn_more">Lær mer</string>
   <string name="GroupManagement_invite_multiple_users">Disse brukerne kan ikke automatisk legges til av deg.\n\nDe er blitt invitert, men vil ikke se noen meldinger til gruppen før invitasjonen godtas.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Vil du forlate gruppen?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Du vil ikke lengre kunne sende eller motta meldinger i denne gruppen.</string>
@@ -704,7 +705,6 @@
   <string name="MessageRecord_you_updated_group">Du har oppdatert gruppa.</string>
   <string name="MessageRecord_the_group_was_updated">Gruppen ble oppdatert.</string>
   <string name="MessageRecord_you_called_date">Du ringte · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Ubesvart anrop · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s oppdaterte gruppa.</string>
   <string name="MessageRecord_called_s">Ringte %s</string>
   <string name="MessageRecord_s_joined_signal">%s er på Signal!</string>
@@ -1078,7 +1078,8 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="ThreadRecord_draft">Utkast:</string>
   <string name="ThreadRecord_called">Du ringte</string>
   <string name="ThreadRecord_called_you">Ringte deg</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Ubesvart anrop</string> -->
+  <string name="ThreadRecord_missed_audio_call">Tapt lydsamtale</string>
+  <string name="ThreadRecord_missed_video_call">Tapt videosamtale</string>
   <string name="ThreadRecord_media_message">Mediemelding</string>
   <string name="ThreadRecord_sticker">Klistremerke</string>
   <string name="ThreadRecord_view_once_photo">Vis en gang bilde</string>
@@ -1352,6 +1353,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="conversation_item_received__contact_photo_description">Kontaktfoto</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Laster inn</string>
+  <string name="ConversationUpdateItem_learn_more">Lær mer</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Spill av … Pause</string>
   <string name="audio_view__download_accessibility_description">Last ned</string>
@@ -1840,6 +1842,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Lagre</string>
   <string name="media_preview__forward_title">Videresend</string>
+  <string name="media_preview__share_title">Del</string>
   <string name="media_preview__all_media_title">Alle medier</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Forhåndsvisning av medier</string>
@@ -2125,5 +2128,12 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <!--VoiceNoteMediaDescriptionCompatFactory-->
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s til %2$s</string>
   <!--StorageUtil-->
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Fjern</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Medlem</string>
+  <string name="ReviewCard__remove_from_group">Fjern fra gruppen</string>
+  <string name="ReviewCard__block">Blokker</string>
+  <string name="ReviewCard__delete">Slett</string>
   <!--EOF-->
 </resources>
