--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Uitgaande eenmaligeweergave-media worden onmiddellijk gewist zodra ze zijn verzonden. Je kunt je eigen media dus niet terugzien. – Gebruik eenmaligeweergave-berichten niet ter beveiliging, want Signal kan niet garanderen dat een bericht op het apparaat van een ander daadwerkelijk wordt gewist.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Je hebt dit eenmaligeweergave-bericht al weergegeven</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Je kunt in dit speciale gesprek notities voor jezelf achterlaten.\nAls je de Signal app op een ander apparaat gekoppeld hebt, dan worden alle notities van na het moment van koppelen gesynchroniseerd. Je kunt dus notities toevoegen en teruglezen vanaf al je gekoppelde apparaten.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d groepsleden hebben dezelfde naam.</string>
+  <string name="ConversationFragment__tap_to_review">Tik om te evalueren</string>
+  <string name="ConversationFragment__review_requests_carefully">Evalueer verzoeken zorgvuldig</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal heeft een ander contactpersoon gevonden met dezelfde naam.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Er is geen browser op je apparaat geïnstalleerd.</string>
   <!--ConversationListFragment-->
@@ -453,6 +457,18 @@
   <string name="GroupManagement_invite_single_user">“%1$s” kan niet direct door jou worden toegevoegd aan de groep. In plaats daarvan heeft hij of zij een uitnodiging gekregen om lid te worden van de groep, en hij of zij zal geen berichten van de groep kunnen zien totdat hij of zij de uitnodiging heeft aanvaard.</string>
   <string name="GroupManagement_learn_more">Meer leren hierover</string>
   <string name="GroupManagement_invite_multiple_users">Deze gebruikers kunnen niet direct door jou aan de groep worden toegevoegd. In plaats daarvan hebben ze een uitnodiging gekregen om lid te worden van de groep, en ze zullen geen berichten van de groep kunnen zien totdat ze de uitnodiging hebben aanvaard.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Wat zijn ‘nieuwe’ groepen?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Nieuwe groepen hebben functionaliteiten waaronder @vermeldingen en groepsbeheer en in de toekomst zullen er meer functionaliteiten aan worden toegevoegd.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Alle gespreksgeschiedenis en media van voor het omzetten zijn behouden gebleven.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Dit groepslid zal opnieuw een uitnodiging om tot de groep toe te treden moeten accepteren en zal geen berichten krijgen zolang dit geaccepteerd is:</item>
+    <item quantity="other">Deze groepsleden zullen opnieuw een uitnodiging om tot de groep toe te treden moeten accepteren en zullen geen berichten krijgen zolang ze dit geaccepteerd hebben:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Dit groepslid is niet in staat om tot nieuwe groepen toe te treden en is verwijderd uit de groep:</item>
+    <item quantity="other">Deze groepsleden zijn niet in staat om tot nieuwe groepen toe te treden en zijn verwijderd uit de groep:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Groep verlaten?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Je zult in dit groepsgesprek niet langer berichten  kunnen verzenden of ontvangen.</string>
@@ -807,7 +823,8 @@
   <string name="MessageRecord_you_updated_group">Je hebt de groep aangepast.</string>
   <string name="MessageRecord_the_group_was_updated">De groep is aangepast.</string>
   <string name="MessageRecord_you_called_date">Je hebt gebeld · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Gemiste oproep · %1$s</string> -->
+  <string name="MessageRecord_missed_audio_call_date">Gemist audiogresprek · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Gemist videogesprek · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s heeft de groep aangepast.</string>
   <string name="MessageRecord_s_called_you_date">%1$s heeft je gebeld · %2$s</string>
   <string name="MessageRecord_called_s">Je hebt %s gebeld</string>
@@ -817,6 +834,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Je hebt de timer voor zelfwissende berichten op %1$s ingesteld.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s heeft de timer voor zelfwissende berichten op %2$s ingesteld.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">De timer voor zelfwissende berichten is op %1$s ingesteld.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Deze groep is omgezet in een nieuwe groep.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s groepslid kon niet toegevoegd worden tot de nieuwe groep en heeft een uitnodiging gekregen om toe te treden.</item>
+    <item quantity="other">%1$s groepsleden konden niet toegevoegd worden tot de nieuwe groep en hebben een uitnodiging gekregen om toe te treden.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s heeft zijn of haar profielnaam naar %2$s gewijzigd.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s heeft zijn of haar profielnaam van %2$s naar %3$s gewijzigd.</string>
@@ -1236,7 +1258,8 @@ Tot slot moet Signal de telefoonstatus kunnen lezen om te voorkomen dat Signal-o
   <string name="ThreadRecord_draft">Concept:</string>
   <string name="ThreadRecord_called">Jij hebt gebeld</string>
   <string name="ThreadRecord_called_you">Heeft je gebeld</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Gemiste oproep</string> -->
+  <string name="ThreadRecord_missed_audio_call">Gemist audiogesprek</string>
+  <string name="ThreadRecord_missed_video_call">Gemist videogesprek</string>
   <string name="ThreadRecord_media_message">Mediabericht</string>
   <string name="ThreadRecord_sticker">Sticker</string>
   <string name="ThreadRecord_view_once_photo">Eenmaligeweergave-afbeelding</string>
@@ -1331,6 +1354,7 @@ Tot slot moet Signal de telefoonstatus kunnen lezen om te voorkomen dat Signal-o
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Dit bericht zal alleen voor jou onherroepelijk gewist worden, maar dus niet voor je gesprekspartner(s).</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s naar %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">Media niet langer beschikbaar.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Geen app gevonden waarmee dit bestand met anderen gedeeld kan worden.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d nieuwe berichten in %2$d gesprekken</string>
   <string name="MessageNotifier_most_recent_from_s">Meest recente van: %1$s</string>
@@ -1523,6 +1547,7 @@ Tot slot moet Signal de telefoonstatus kunnen lezen om te voorkomen dat Signal-o
   <string name="conversation_item_received__contact_photo_description">Foto van contactpersoon</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Aan het laden</string>
+  <string name="ConversationUpdateItem_learn_more">Meer leren hierover</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Afspelen … Pauzeren</string>
   <string name="audio_view__download_accessibility_description">Downloaden</string>
@@ -2038,6 +2063,7 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <!--media_preview-->
   <string name="media_preview__save_title">Opslaan</string>
   <string name="media_preview__forward_title">Doorsturen</string>
+  <string name="media_preview__share_title">Delen via andere app</string>
   <string name="media_preview__all_media_title">Alle media</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Mediavoorbeeld</string>
@@ -2349,5 +2375,32 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s naar %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Evalueer groepsleden</string>
+  <string name="ReviewCardDialogFragment__review_request">Evalueer verzoeken</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d groepsleden hebben dezelfde namen. Evalueer de groepsleden hieronder en neem actie indien nodig.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Evalueer de contactpersonen hieronder en onderneem actie als je niet zeker bent van wie het verzoek afkomstig is.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Geen andere gemeenschappelijke groepen.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Geen gemeenschappelijke groepen.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d gemeenschappelijke groep</item>
+    <item quantity="other">%d gemeenschappelijke groepen</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d gemeenschappelijke groep</item>
+    <item quantity="other">%d gemeenschappelijke groepen</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">%1$s uit deze groep verwijderen?</string>
+  <string name="ReviewCardDialogFragment__remove">Verwijderen</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Het verwijderen van een groepslid is mislukt.</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Lid</string>
+  <string name="ReviewCard__request">Verzoek</string>
+  <string name="ReviewCard__your_contact">Je contactpersoon</string>
+  <string name="ReviewCard__remove_from_group">Van de groep verwijderen</string>
+  <string name="ReviewCard__update_contact">Contactpersoon bijwerken</string>
+  <string name="ReviewCard__block">Blokkeren</string>
+  <string name="ReviewCard__delete">Wissen</string>
+  <string name="ReviewCard__recently_changed">%1$s heeft recentelijk zijn of haar profielnaam naar %2$s gewijzigd.</string>
   <!--EOF-->
 </resources>
