--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -453,6 +453,7 @@
   <string name="GroupManagement_invite_single_user">“%1$s” não pode ser adicionado(a) automaticamente para este grupo por si.\n\nEle(a) foi convidado(a) a juntar-se, mas não irá ver nenhuma mensagem do grupo até que ele(a) aceite.</string>
   <string name="GroupManagement_learn_more">Saber mais</string>
   <string name="GroupManagement_invite_multiple_users">Estes utilizadores não podem ser adicionados automaticamente a este grupo por si.\n\nEles foram convidados a juntarem-se, mas não irão ver nenhuma mensagem do grupo até que aceite</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Abandonar o grupo?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Deixará poder de receber ou enviar mensagens deste grupo.</string>
@@ -806,7 +807,6 @@
   <string name="MessageRecord_you_updated_group">Você atualizou o grupo.</string>
   <string name="MessageRecord_the_group_was_updated">O grupo foi atualizado.</string>
   <string name="MessageRecord_you_called_date">Telefonou · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Chamada perdida · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s atualizou o grupo.</string>
   <string name="MessageRecord_s_called_you_date">%1$s telefonou-lhe · %2$s</string>
   <string name="MessageRecord_called_s">Ligou para %s</string>
@@ -1229,7 +1229,8 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="ThreadRecord_draft">Rascunho:</string>
   <string name="ThreadRecord_called">Você ligou</string>
   <string name="ThreadRecord_called_you">Ligou-lhe</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Chamada perdida</string> -->
+  <string name="ThreadRecord_missed_audio_call">Chamada de áudio perdida</string>
+  <string name="ThreadRecord_missed_video_call">Chamada de video perdida</string>
   <string name="ThreadRecord_media_message">Mensagem multimédia</string>
   <string name="ThreadRecord_sticker">Autocolante</string>
   <string name="ThreadRecord_view_once_photo">Fotografia de visualização única</string>
@@ -1516,6 +1517,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="conversation_item_received__contact_photo_description">Foto de contacto</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">A carregar</string>
+  <string name="ConversationUpdateItem_learn_more">Saber mais</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Play … Pausa</string>
   <string name="audio_view__download_accessibility_description">Descarregar</string>
@@ -2029,6 +2031,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--media_preview-->
   <string name="media_preview__save_title">Gravar</string>
   <string name="media_preview__forward_title">Reencaminhar</string>
+  <string name="media_preview__share_title">Partilhar</string>
   <string name="media_preview__all_media_title">Toda a multimédia</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Pré-visualização de multimédia</string>
@@ -2340,5 +2343,12 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s para %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Remover</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Membro</string>
+  <string name="ReviewCard__remove_from_group">Remover do grupo</string>
+  <string name="ReviewCard__block">Bloquear</string>
+  <string name="ReviewCard__delete">Eliminar</string>
   <!--EOF-->
 </resources>
