--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -469,6 +469,7 @@
   <string name="GroupManagement_invite_single_user">\"%1$s\" nu poate fi adăugat automat la acest grup de către dvs.\n\nAu fost invitați să se alăture și nu vor vedea niciun mesaj de grup până când nu acceptă.</string>
   <string name="GroupManagement_learn_more">Aflați mai multe</string>
   <string name="GroupManagement_invite_multiple_users">Acești utilizatori nu pot fi adăugați automat la acest grup de către dvs.\n\nAu fost invitați să se alăture și nu vor vedea niciun mesaj de grup până când nu acceptă.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Părăsiți grupul?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nu vei mai putea trimite sau primi mesaje in acest grup.</string>
@@ -841,7 +842,6 @@
   <string name="MessageRecord_you_updated_group">Ați actualizat grupul.</string>
   <string name="MessageRecord_the_group_was_updated">Grupul a fost actualizat.</string>
   <string name="MessageRecord_you_called_date">Ați apelat pe · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Apel nepreluat · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s a actualizat grupul.</string>
   <string name="MessageRecord_s_called_you_date">%1$s va apelat · %2$s</string>
   <string name="MessageRecord_called_s">Apel %s</string>
@@ -1276,7 +1276,8 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="ThreadRecord_draft">Ciornă:</string>
   <string name="ThreadRecord_called">Ați apelat</string>
   <string name="ThreadRecord_called_you">Te-a apelat</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Apel nepreluat</string> -->
+  <string name="ThreadRecord_missed_audio_call">Apel audio nepreluat</string>
+  <string name="ThreadRecord_missed_video_call">Apel video nepreluat</string>
   <string name="ThreadRecord_media_message">Mesaj media</string>
   <string name="ThreadRecord_sticker">Autocolant</string>
   <string name="ThreadRecord_view_once_photo">Poză vizibilă o singură dată</string>
@@ -1566,6 +1567,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="conversation_item_received__contact_photo_description">Poză contact</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Se încarcă</string>
+  <string name="ConversationUpdateItem_learn_more">Aflați mai multe</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Redare … Pauză</string>
   <string name="audio_view__download_accessibility_description">Descarcă</string>
@@ -2088,6 +2090,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <!--media_preview-->
   <string name="media_preview__save_title">Salvează</string>
   <string name="media_preview__forward_title">Redirecționează</string>
+  <string name="media_preview__share_title">Partajați</string>
   <string name="media_preview__all_media_title">Toate fișierele media</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Previzualizare media</string>
@@ -2406,5 +2409,12 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s la %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Eliminați</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Membru</string>
+  <string name="ReviewCard__remove_from_group">Eliminați din grup</string>
+  <string name="ReviewCard__block">Blochează</string>
+  <string name="ReviewCard__delete">Șterge</string>
   <!--EOF-->
 </resources>
