--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -453,6 +453,7 @@
   <string name="GroupManagement_invite_single_user">\"%1$s\" kan inte läggas till automatiskt till denna grupp av dig.\n\nDe har blivit inbjudna att gå med och kommer inte att se några gruppmeddelanden förrän de accepterar.</string>
   <string name="GroupManagement_learn_more">Läs mer</string>
   <string name="GroupManagement_invite_multiple_users">Dessa användare kan inte automatiskt läggas till i denna grupp.\n\nDe har blivit inbjudna att gå med i gruppen och kommer inte att se några gruppmeddelanden förrän de accepterar.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Lämna grupp?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Du kommer inte längre att kunna skicka eller ta emot meddelanden i denna grupp.</string>
@@ -806,7 +807,6 @@
   <string name="MessageRecord_you_updated_group">Du uppdaterade gruppen.</string>
   <string name="MessageRecord_the_group_was_updated">Gruppen uppdaterades.</string>
   <string name="MessageRecord_you_called_date">Du ringde · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Missat samtal · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s uppdaterade gruppen.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ringde dig · %2$s</string>
   <string name="MessageRecord_called_s">Ringde %s</string>
@@ -1227,7 +1227,8 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="ThreadRecord_draft">Utkast:</string>
   <string name="ThreadRecord_called">Du ringde</string>
   <string name="ThreadRecord_called_you">Ringde dig</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Missat samtal</string> -->
+  <string name="ThreadRecord_missed_audio_call">Missat ljudsamtal</string>
+  <string name="ThreadRecord_missed_video_call">Missat videosamtal</string>
   <string name="ThreadRecord_media_message">Mediameddelande</string>
   <string name="ThreadRecord_sticker">Klistermärke</string>
   <string name="ThreadRecord_view_once_photo">Visa-en-gång foto</string>
@@ -1514,6 +1515,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="conversation_item_received__contact_photo_description">Kontaktfoto</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Läser in</string>
+  <string name="ConversationUpdateItem_learn_more">Läs mer</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Spela … Pausa</string>
   <string name="audio_view__download_accessibility_description">Hämta</string>
@@ -2027,6 +2029,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Spara</string>
   <string name="media_preview__forward_title">Vidarebefordra</string>
+  <string name="media_preview__share_title">Dela</string>
   <string name="media_preview__all_media_title">Alla media</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">Mediaförhandsgranskning</string>
@@ -2338,5 +2341,12 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s till %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Ta bort</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Medlem</string>
+  <string name="ReviewCard__remove_from_group">Ta bort från grupp</string>
+  <string name="ReviewCard__block">Blockera</string>
+  <string name="ReviewCard__delete">Ta bort</string>
   <!--EOF-->
 </resources>
