--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -431,6 +431,7 @@
   <string name="GroupManagement_invite_single_user">“%1$s” ஐ தானாக இந்த குழுவில் சேர்க்க முடியாது. குழுவில் சேர அவர்கள் அழைக்கப்பட்டுள்ளனர். எந்தவொரு குழு செய்திகளையும் அவர்கள் ஏற்றுக்கொள்ளும் வரை பார்க்க மாட்டார்கள்.</string>
   <string name="GroupManagement_learn_more">மேலும் அறிக</string>
   <string name="GroupManagement_invite_multiple_users">இந்த பயனர்களை இந்த குழுவில் தானாக உங்களால் சேர்க்க முடியாது. குழுவில் சேர அவர்கள் அழைக்கப்பட்டுள்ளனர், அவர்கள் ஏற்றுக்கொள்ளும் வரை எந்த குழு செய்திகளையும் பார்க்க மாட்டார்கள்.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">குழுவிலுருந்து விலகலாமா?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">இந்த குழுவில் நீங்கள் இனி செய்திகளை அனுப்பவோ பெறவோ முடியாது.</string>
@@ -1114,7 +1115,8 @@
   <string name="ThreadRecord_draft">வரைவு:</string>
   <string name="ThreadRecord_called">நீங்கள் அழைத்தீர்கள்</string>
   <string name="ThreadRecord_called_you">உங்களை அழைத்தார்</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">தவறிய அழைப்பு</string> -->
+  <string name="ThreadRecord_missed_audio_call">ஒலி அழைப்பு தவறவிட்டது</string>
+  <string name="ThreadRecord_missed_video_call">காணொளி அழைப்பு தவறவிட்டது</string>
   <string name="ThreadRecord_media_message">பல்லூடகச் செய்தி</string>
   <string name="ThreadRecord_sticker">ஒட்டி</string>
   <string name="ThreadRecord_view_once_photo">காண்க-ஒருமுறை புகைப்படம் </string>
@@ -1391,6 +1393,7 @@
   <string name="conversation_item_received__contact_photo_description">தொடர்பின் புகைப்படம்</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">ஏற்றுதல்</string>
+  <string name="ConversationUpdateItem_learn_more">மேலும் அறிக</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">விளையாடு … இடைநிறுத்து</string>
   <string name="audio_view__download_accessibility_description">பதிவிறக்க</string>
@@ -1906,6 +1909,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">சேமி</string>
   <string name="media_preview__forward_title">முன்னனுப்புக</string>
+  <string name="media_preview__share_title">பகிர்</string>
   <string name="media_preview__all_media_title">அனைத்து ஊடகங்களும்</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">மீடியா முன்னோட்டம்</string>
@@ -2195,5 +2199,12 @@
   <!--VoiceNoteMediaDescriptionCompatFactory-->
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s to %2$s</string>
   <!--StorageUtil-->
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">நீக்கு</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">உறுப்பினர்</string>
+  <string name="ReviewCard__remove_from_group">குழுவிலிருந்து அகற்று</string>
+  <string name="ReviewCard__block">தடு </string>
+  <string name="ReviewCard__delete">அழி</string>
   <!--EOF-->
 </resources>
