--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -452,6 +452,7 @@
   <string name="GroupManagement_invite_single_user">\"%1$s\" sizin tarafınızdan bu gruba otomatik olarak eklenemez.\n\nKatılmaları için davet gönderildi ve daveti kabul edene kadar hiçbir grup iletisini görmeyecekler.</string>
   <string name="GroupManagement_learn_more">Dahasını öğrenin</string>
   <string name="GroupManagement_invite_multiple_users">Bu kullanıcılar otomatik olarak bu gruba eklenemez.\n\nKatılmaları için davet gönderildi ve daveti kabul edene kadar hiçbir grup iletisini görmeyecekler.</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Gruptan ayrıl?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Bu gruptan artık ileti almayacak ve gönderemeyeceksiniz.</string>
@@ -805,7 +806,6 @@
   <string name="MessageRecord_you_updated_group">Grubu güncellediniz.</string>
   <string name="MessageRecord_the_group_was_updated">Grup güncellendi</string>
   <string name="MessageRecord_you_called_date">Aradınız · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Yanıtsız arama · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s grubu güncelledi.</string>
   <string name="MessageRecord_s_called_you_date">%1$s sizi aradı · %2$s</string>
   <string name="MessageRecord_called_s">%s arandı</string>
@@ -1230,7 +1230,8 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="ThreadRecord_draft">Taslak:</string>
   <string name="ThreadRecord_called">Aradınız</string>
   <string name="ThreadRecord_called_you">Sizi aradı</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Cevapsız arama</string> -->
+  <string name="ThreadRecord_missed_audio_call">Cevapsız sesli arama</string>
+  <string name="ThreadRecord_missed_video_call">Cevapsız görüntülü arama</string>
   <string name="ThreadRecord_media_message">İçerik iletisi</string>
   <string name="ThreadRecord_sticker">Çıkartma</string>
   <string name="ThreadRecord_view_once_photo">Tek görümlük fotoğraf</string>
@@ -1517,6 +1518,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="conversation_item_received__contact_photo_description">Kişi fotoğrafı</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">Yükleniyor</string>
+  <string name="ConversationUpdateItem_learn_more">Dahasını öğrenin</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">Oynat … Durdur</string>
   <string name="audio_view__download_accessibility_description">İndir</string>
@@ -2030,6 +2032,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Kaydet</string>
   <string name="media_preview__forward_title">Yönlendir</string>
+  <string name="media_preview__share_title">Paylaş</string>
   <string name="media_preview__all_media_title">Tüm içerik</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">İçerik önizlemesi</string>
@@ -2341,5 +2344,12 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s --&gt; %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">Kaldır</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">Üye</string>
+  <string name="ReviewCard__remove_from_group">Gruptan çıkart</string>
+  <string name="ReviewCard__block">Engelle</string>
+  <string name="ReviewCard__delete">Sil</string>
   <!--EOF-->
 </resources>
