--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -437,6 +437,7 @@
   <string name="GroupManagement_invite_single_user">“%1$s”不能直接被您邀请入群。\n\n对方已收到入群邀请，但在他同意入群前他将无法看到群消息。</string>
   <string name="GroupManagement_learn_more">了解更多</string>
   <string name="GroupManagement_invite_multiple_users">这些用户不能直接被你邀请入群组。\n\n他们已经收到入群邀请，但在他们同意之前无法收到来自该群组的任何消息。</string>
+  <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">离开群组？</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">您将无法在这个群聊里面发送和接收消息。</string>
@@ -771,7 +772,6 @@
   <string name="MessageRecord_you_updated_group">您已更新该群组</string>
   <string name="MessageRecord_the_group_was_updated">群组已更新。</string>
   <string name="MessageRecord_you_called_date">你曾致电 · %1$s</string>
-  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">未接来电 · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s 已更新该群组。</string>
   <string name="MessageRecord_s_called_you_date">%1$s 曾呼叫你· %2$s</string>
   <string name="MessageRecord_called_s">曾呼叫 %s</string>
@@ -1187,7 +1187,6 @@
   <string name="ThreadRecord_draft">草稿：</string>
   <string name="ThreadRecord_called">您呼叫</string>
   <string name="ThreadRecord_called_you">呼叫您</string>
-  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">未接来电</string> -->
   <string name="ThreadRecord_media_message">媒体消息</string>
   <string name="ThreadRecord_sticker">表情</string>
   <string name="ThreadRecord_view_once_photo">一次性图片</string>
@@ -1471,6 +1470,7 @@
   <string name="conversation_item_received__contact_photo_description">联系人图片</string>
   <!--ConversationUpdateItem-->
   <string name="ConversationUpdateItem_loading">正在加载</string>
+  <string name="ConversationUpdateItem_learn_more">了解更多</string>
   <!--audio_view-->
   <string name="audio_view__play_pause_accessibility_description">播放 … 暂停</string>
   <string name="audio_view__download_accessibility_description">下载</string>
@@ -1976,6 +1976,7 @@
   <!--media_preview-->
   <string name="media_preview__save_title">保存</string>
   <string name="media_preview__forward_title">转发</string>
+  <string name="media_preview__share_title">分享</string>
   <string name="media_preview__all_media_title">全部媒体</string>
   <!--media_preview_activity-->
   <string name="media_preview_activity__media_content_description">媒体预览</string>
@@ -2278,5 +2279,12 @@
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s 至 %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__remove">删除</string>
+  <!--ReviewCard-->
+  <string name="ReviewCard__member">成员</string>
+  <string name="ReviewCard__remove_from_group">移出群组</string>
+  <string name="ReviewCard__block">屏蔽</string>
+  <string name="ReviewCard__delete">删除</string>
   <!--EOF-->
 </resources>
